# CliqCity

./: .gitignore  CMakeLists.txt  README.md
App/Mesh/: Mesh.sln  SceneViewer.sln
App/Mesh/Mesh/: FS_Tri_PS.hlsl  FS_Tri_VS.hlsl  Mesh.vcxproj  Mesh.vcxproj.filters  MeshApplication.cpp  MeshApplication.h  PixelShader.hlsl  SceneResource.h  SceneViewer.cpp  SceneViewer.h  VertexShader.hlsl  cube_map_ps.hlsl  cube_map_vs.hlsl  fbx.txt  imgui.ini  irradiance_map_ps.hlsl  main.cpp  radiance_map_ps.hlsl  scene_model_ps.hlsl  scene_model_vs.hlsl
App/Mesh/Mesh/Assets/: .gitignore  Fidget_Spinner.FBX  Prof_Animated.fbx  approaching_storm.dds  cerberus.scene  cube.fbx  garden.scene  gun.scene  luz_scene.txt  pencil.fbx  sibenik.scene  sponza.scene  spruit_sunrise.dds  tarmac_0.DDS  test.DDS  test_fbx.scene
App/Mesh/Mesh/Assets/crytek_sponza/: sponza.mtl
App/Mesh/Mesh/Assets/fbx_test/: cube.fbx  cube_tex.fbx
App/Mesh/Mesh/Assets/garden_scene_obj/: garden_scene.mtl
App/Mesh/Mesh/Assets/gun/: gun.mtl
App/Mesh/Mesh/Assets/sponza_obj/: sponza.mtl
App/Mesh/Mesh/Shaders/: FS_Tri_VS.hlsl  brdf_integration_ps.hlsl  cube_map_vs.hlsl  scene_model_ps.hlsl  scene_model_vs.hlsl
App/SceneViewer/: CMakeLists.txt
App/SceneViewer/src/: SceneResource.h  SceneViewer.cpp  imgui.ini  main.cpp
App/SceneViewer/src/Shaders/: FS_Tri_PS.hlsl  irradiance_map_ps.hlsl  radiance_map_ps.hlsl  scene_model_ps.hlsl
App/Timer/: Timer.sln
App/Timer/Debugx86/: Luz.lib
App/Timer/Timer/: Timer.vcxproj  Timer.vcxproj.filters  TimerApp.cpp  TimerApp.h  main.cpp
App/Timer/Timer/Debugx86/: vc140.idb
App/Timer/Timer/Debugx86/Timer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Timer.lastbuildstate
Assets/: Animated.scene  satara_night.dds  sponza.scene
Assets/Animated/: AnimTest.fbx
Assets/crytek_sponza/: sponza.old.mtl
Luz/: Luz.sln
Luz/Luz/: CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Console.cpp  Console.h  Delegate.h  Engine.h  FindFBX.cmake  IApplication.cpp  IApplication.h  Luz.h  Luz.vcxproj  Luz.vcxproj.filters  LuzExport.h  LzAssert.cpp  LzAssert.h  Mesh.cpp  Mesh.h  OSWin.cpp  OSWin.h  Options.h  Scene.cpp  Scene.h  Timer.h  Transform.cpp  Transform.h  TypeDefs.h  Window.cpp  Window.h  WindowsMessageCenter.cpp  stdafx.h  windows_utils.cpp
Luz/Luz/Debugx86/: Luz.idb
Luz/Luz/Debugx86/Luz.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
Luz/Luz/Graphics/: CommandStream.h  Graphics.cpp  Graphics.h  GraphicsTypes.cpp  GraphicsTypes.h  IMaterial.cpp  IMaterial.h  ISignature.cpp  ISignature.h  Material.h  MaterialInstance.cpp  MaterialInstance.h  MaterialSignature.cpp  MaterialSignature.h  PipelineStates.cpp  PipelineStates.h  Renderable.h  ResourceCollection.cpp  ResourceCollection.h
Luz/Luz/Graphics/DirectX12/: CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  CommandStream_Dx12.cpp  DX12GraphicsTypes.cpp  DescriptorAllocator_Dx12.cpp  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Dx12CommandStream.cpp  Dx12DescriptorAllocator.cpp  Dx12DescriptorAllocator.h  Dx12Graphics.cpp  Dx12Graphics.h  Dx12GraphicsTypes.h  Fence.cpp  Fence.h  FenceContext.cpp  FenceContext.h  GpuResource.cpp  GpuResource.h  GpuState.h  GraphicsTypes_Dx12.h  Graphics_Dx12.cpp  Material.cpp  Material.h  PipelineState.cpp  PipelineState.h  RenderContext.cpp  RenderContext.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  TextureImpl.cpp  TextureImpl.h  (+9 more)
Luz/Luz/Graphics/DirectX12/Shaders/: Lighting.hlsli  Sobel.hlsli
Luz/Luz/Platform/: Input.cpp  Input.h  MSPlatformWindow.cpp  MSPlatformWindow.h  Platform.cpp  Platform.h  PlatformEvents.h  PlatformImgui.h  PlatformInput.cpp  PlatformInput.h  PlatformTypes.cpp  PlatformTypes.h  PlatformWindow.h  Window.cpp  Window.h  WindowsMessageCenter.cpp  WindowsMessageCenter.h  WindowsPlatform.cpp  WindowsPlatform.h  WindowsPlatformTypes.cpp  WindowsPlatformTypes.h  windows_utils.h
Luz/Luz/Platform/Win64/: PlatformEvents_Win64.cpp  PlatformTypes_Win64.cpp  PlatformWindow_Win64.cpp  Platform_Win64.cpp
Luz/Luz/Resource/: Fbx.cpp  Fbx.h  FbxResource.cpp  MeshResourceUtility.cpp  MeshResourceUtility.h  MtlResource.cpp  MtlResource.h  ObjResource.cpp  ObjResource.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
Luz/Luz/src/: Camera.cpp  Camera.h  CameraController.cpp  Engine.cpp  Engine.h  GeneralMacros.h  Luz.h  LuzExport.h  LzAssert.cpp  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  TypeDefs.h  VertexTraits.h  stdafx.h
Luz/Luz/src/Graphics/: CommandStream.h  Graphics.h  GraphicsImgui.h  GraphicsTypes.cpp  ResourceCollection.h
Luz/Luz/src/Graphics/DirectX12/: CommandStream_Dx12.cpp  GraphicsImgui_Dx12.cpp  GraphicsTypes_Dx12.cpp  Graphics_Dx12.cpp
Luz/Luz/src/Graphics/DirectX12/Shaders/: Lighting.hlsli  Monochrome_PS.hlsl  Sobel.hlsli
Luz/Luz/src/Platform/: Platform.h  PlatformEvents.h  PlatformInput.h  PlatformWindow.h
Luz/Luz/src/Platform/Win64/: PlatformImgui_Win64.cpp  PlatformInput_Win64.cpp  PlatformTypes_Win64.h  PlatformWindow_Win64.cpp  Platform_Win64.cpp
Luz/Luz/src/Resource/: FbxResource.cpp  FbxResource.h  MtlResource.h  ObjResource.cpp  ResourceManager.h
